Add a talks page.

--- a/2026/_layouts/default.html
+++ b/2026/_layouts/default.html
@@ -28,13 +28,13 @@
       <img src="{{ '/assets/images/tedx-breckenridge-logo-black.png' | relative_url }}" alt="TEDxBreckenridge">
     </a>
     <ul class="nav-links">
-      <li><a href="/#theme">Theme</a></li>
-      <li><a href="/#speakers">Speakers</a></li>
-      <li><a href="/#gallery">Gallery</a></li>
+      <li><a href="/#salon">Salon</a></li>
+      <li><a href="/#main-event">2026 Event</a></li>
       <li><a href="/talks">Watch</a></li>
+      <li><a href="/#support">Get Involved</a></li>
       <li><a href="/about">About</a></li>
     </ul>
-    <a href="/#tickets" class="nav-cta">Get Tickets</a>
+    <a href="/#newsletter" class="nav-cta">Stay Updated</a>
   </nav>
 
   <main>
