--- a/2026/_layouts/default.html
+++ b/2026/_layouts/default.html
@@ -34,7 +34,7 @@
       <li><a href="/#support">Get Involved</a></li>
       <li><a href="/about">About</a></li>
     </ul>
-    <a href="/#newsletter" class="nav-cta">Stay Updated</a>
+    <a href="https://tedxbreckenridge.ticketsauce.com/e/tedx-salon-january-event" class="nav-cta">Get Tickets</a>
   </nav>
 
   <main>
