--- a/2026/_layouts/default.html
+++ b/2026/_layouts/default.html
@@ -34,11 +34,38 @@
     </button>
     <div class="nav-menu" id="navMenu">
       <ul class="nav-links">
-        <li><a href="/#salon">Salon</a></li>
-        <li><a href="/#main-event">2026 Event</a></li>
-        <li><a href="/talks">Watch</a></li>
-        <li><a href="/#support">Get Involved</a></li>
-        <li><a href="/about">About</a></li>
+        <li class="nav-dropdown">
+          <a href="#" class="nav-dropdown-toggle">Attend</a>
+          <ul class="nav-dropdown-menu">
+            <li><a href="/#salon">January Salon Event</a></li>
+            <li><a href="/#main-event">October 2026 Main Event</a></li>
+            <li><a href="/faq">FAQ</a></li>
+          </ul>
+        </li>
+        <li class="nav-dropdown">
+          <a href="#" class="nav-dropdown-toggle">Watch</a>
+          <ul class="nav-dropdown-menu">
+            <li><a href="/talks">All Talks</a></li>
+          </ul>
+        </li>
+        <li class="nav-dropdown">
+          <a href="#" class="nav-dropdown-toggle">Support</a>
+          <ul class="nav-dropdown-menu">
+            <li><a href="https://tedxbreckenridge.com/speak" target="_blank">Apply to Speak</a></li>
+            <li><a href="https://tedxbreckenridge.com/volunteer" target="_blank">Volunteer</a></li>
+            <li><a href="https://tedxbreckenridge.com/sponsor" target="_blank">Sponsor</a></li>
+            <li><a href="https://tedxbreckenridge.com/donate" target="_blank">Donate</a></li>
+          </ul>
+        </li>
+        <li class="nav-dropdown">
+          <a href="#" class="nav-dropdown-toggle">Discover</a>
+          <ul class="nav-dropdown-menu">
+            <li><a href="/about">About</a></li>
+            <li><a href="/team">Team</a></li>
+            <li><a href="/blog">Blog</a></li>
+            <li><a href="/contact">Contact</a></li>
+          </ul>
+        </li>
       </ul>
       <a href="https://tedxbreckenridge.ticketsauce.com/e/tedx-salon-january-event" class="nav-cta">Get Tickets</a>
     </div>
@@ -56,15 +83,51 @@
       body.classList.toggle('nav-open');
     });
 
-    // Close menu when clicking on a link
-    const navLinks = document.querySelectorAll('.nav-links a, .nav-cta');
-    navLinks.forEach(link => {
+    // Dropdown functionality for mobile
+    const dropdownToggles = document.querySelectorAll('.nav-dropdown-toggle');
+    dropdownToggles.forEach(toggle => {
+      toggle.addEventListener('click', function(e) {
+        // On mobile, toggle dropdowns
+        if (window.innerWidth <= 900) {
+          e.preventDefault();
+          const parent = this.parentElement;
+          const wasActive = parent.classList.contains('active');
+
+          // Close all dropdowns
+          document.querySelectorAll('.nav-dropdown').forEach(dropdown => {
+            dropdown.classList.remove('active');
+          });
+
+          // Open this one if it wasn't active
+          if (!wasActive) {
+            parent.classList.add('active');
+          }
+        }
+      });
+    });
+
+    // Close menu when clicking on a dropdown link
+    const dropdownLinks = document.querySelectorAll('.nav-dropdown-menu a');
+    dropdownLinks.forEach(link => {
       link.addEventListener('click', function() {
         navMenu.classList.remove('active');
         navHamburger.classList.remove('active');
         body.classList.remove('nav-open');
+        document.querySelectorAll('.nav-dropdown').forEach(dropdown => {
+          dropdown.classList.remove('active');
+        });
       });
     });
+
+    // Close CTA click
+    const navCta = document.querySelector('.nav-cta');
+    if (navCta) {
+      navCta.addEventListener('click', function() {
+        navMenu.classList.remove('active');
+        navHamburger.classList.remove('active');
+        body.classList.remove('nav-open');
+      });
+    }
 
     // Close menu when clicking outside
     document.addEventListener('click', function(event) {
