--- a/2026/_layouts/default.html
+++ b/2026/_layouts/default.html
@@ -8,6 +8,73 @@
   {% seo %}
   {% feed_meta %}
 
+  <!-- Schema.org Structured Data -->
+  <script type="application/ld+json">
+  {
+    "@context": "https://schema.org",
+    "@graph": [
+      {
+        "@type": "Organization",
+        "@id": "{{ site.url }}/#organization",
+        "name": "TEDxBreckenridge",
+        "url": "{{ site.url }}",
+        "logo": {
+          "@type": "ImageObject",
+          "url": "{{ site.url }}{{ site.logo }}",
+          "width": 600,
+          "height": 60
+        },
+        "sameAs": [
+          "https://twitter.com/tedxbreckenridge",
+          "https://facebook.com/tedxbreckenridge",
+          "https://instagram.com/tedxbreckenridge",
+          "https://youtube.com/tedxbreckenridge",
+          "https://www.flickr.com/photos/tedxbreckenridge"
+        ],
+        "contactPoint": {
+          "@type": "ContactPoint",
+          "email": "{{ site.email }}",
+          "contactType": "General Inquiries"
+        }
+      },
+      {
+        "@type": "WebSite",
+        "@id": "{{ site.url }}/#website",
+        "url": "{{ site.url }}",
+        "name": "{{ site.title }}",
+        "description": "{{ site.description | strip_html | strip_newlines | truncate: 160 }}",
+        "publisher": {
+          "@id": "{{ site.url }}/#organization"
+        }
+      }
+      {% if page.url == "/" or page.url == "/index.html" %}
+      ,{
+        "@type": "Event",
+        "name": "TEDxBreckenridge 2026",
+        "startDate": "2026-10-03",
+        "eventAttendanceMode": "https://schema.org/OfflineEventAttendanceMode",
+        "eventStatus": "https://schema.org/EventScheduled",
+        "location": {
+          "@type": "Place",
+          "name": "Riverwalk Center",
+          "address": {
+            "@type": "PostalAddress",
+            "addressLocality": "Breckenridge",
+            "addressRegion": "CO",
+            "addressCountry": "US"
+          }
+        },
+        "organizer": {
+          "@id": "{{ site.url }}/#organization"
+        },
+        "description": "TEDxBreckenridge 2026 - Ideas worth spreading in the heart of the Rockies. Join us for an evening of inspiring talks, local voices, and meaningful connections.",
+        "image": "{{ site.url }}{{ site.image }}"
+      }
+      {% endif %}
+    ]
+  }
+  </script>
+
   <link rel="stylesheet" href="{{ '/assets/css/main.css' | relative_url }}">
 
   {% if site.google_analytics %}
